2002-07-20  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mi-index.el (mode-info-search-info-files): Check whether
	directory exists before `directory-files' is called.
	(mode-info-regexp-opt): Install workaround to avoid shy-grouping.

	* mi-emacs.el (mode-info-emacs-titles): Change its default.

	* mi-elisp.el (mode-info-elisp-titles): Change its default.

2002-07-20  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Release 0.0.5.

	* mode-info.el (mode-info-index-coding-system): Abolished.

	* mi-ruby.el (mode-info-ruby-titles): Change its default.

	* mi-perl.el (mode-info-perl-titles): Change its default.

	* mi-octave.el (mode-info-octave-titles): Change its default.

	* mi-libc.el (mode-info-libc-titles): Change its default.

	* mi-index.el (mode-info-read-coding-system): Renamed from
	`mode-info-coding-system'.
	(mode-info-write-coding-system): New option.
	(mode-info-make-all-indices): If an error occurs, print its
	message.
	(mode-info-node-top-regexp): Relaxed.
	(make-index-file): Follow the above change.  Refer
	`mode-info-read-coding-system' instead of
	`mode-info-coding-system'.
	(mode-info-dump-symbols): Refer `mode-info-write-coding-system'
	instead of `mode-info-index-coding-system'.
	(mode-info-regexp-opt): New function.

	* Makefile.in (clean, distclean): Modified.

2002-07-20  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Release 0.0.4.

	* mode-info.el (mode-info-class-alist): Add `emacs'.
	(mode-info-show-document): Return the specified position if
	success.

	* mi-util.el (mode-info-titles-type): New constant.
	(mode-info-method-next): New function.

	* mi-ruby.el (mode-info-ruby-titles): Refer
	`mode-info-title-types' as its type.

	* mi-perl.el (mode-info-perl-titles): Refer
	`mode-info-title-types' as its type.

	* mi-octave.el (mode-info-octave-titles): Refer
	`mode-info-title-types' as its type.

	* mi-libc.el (mode-info-libc-titles): Refer
	`mode-info-title-types' as its type.
